Fix deprecated URL constructor warning
Replaced the deprecated `new URL(String)` constructor with the modern `new URI(String).toURL()` alternative in `DriverLoader.java` and `SeedDatabaseAction.java`.

This change also includes adding the necessary `URISyntaxException` handling.